--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,17 @@ name = "MDPDesign"
 uuid = "e97ac0d4-88e9-4096-9e8b-2e7aa1956149"
 authors = ["WhiffleFish <tylertronics@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+DiscreteValueIteration = "4b033969-44f6-5439-a48b-c11fa3648068"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
+POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
+
+[compat]
+DiscreteValueIteration = "0.4.8"
+HiGHS = "1.12.0"
+JuMP = "1.23.3"
+POMDPTools = "1.1.0"
+POMDPs = "1.0.0"
