--- a/Project.toml
+++ b/Project.toml
@@ -7,16 +7,20 @@ version = "0.1.0"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+POMDPModels = "355abbd5-f08e-5560-ac9e-8b5f2592a0ca"
 POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 HiGHS = "1.12.0"
 JuMP = "1.23.3"
 LinearAlgebra = "1.11.0"
+POMDPModels = "0.4.21"
 POMDPTools = "1.1.0"
 POMDPs = "1.0.0"
 SparseArrays = "1.11.0"
+StaticArrays = "1.9.8"
 Zygote = "0.6.73"
