--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["WhiffleFish <tylertronics@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+ConstrainedPOMDPs = "7a9489b1-4b84-4e64-8108-bdcab6d54d2c"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -15,6 +16,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+ConstrainedPOMDPs = "0.1.0"
 HiGHS = "1.12.0"
 JuMP = "1.23.3"
 LinearAlgebra = "1.11.0"
